# aerial-cuda-accelerated-ran

./: .gitattributes  .gitignore  ATTRIBUTION.rst  CMakeLists.txt  CMakePresets.json  README.md  aerial-sdk-version  run_l1.sh
cuMAC/: CMakeLists.txt  README.md  update_copyright.sh
cuMAC/examples/: CMakeLists.txt  network.cu  network.h  parameters.h  testBench.cpp  testBench.hpp  trafficModel.h
cuMAC/examples/cellAssociate/: CMakeLists.txt  cellAssociateTest.cpp
cuMAC/examples/channInput/: CMakeLists.txt
cuMAC/examples/cpuMatAlg/: CMakeLists.txt  test.cpp
cuMAC/examples/cusolverSvd/: CMakeLists.txt  test.cpp
cuMAC/examples/eigenMatOp/: CMakeLists.txt  test.cpp
cuMAC/examples/gpuAlg/: test.cu
cuMAC/examples/ml/: CMakeLists.txt  mcsSelectionDRL.cpp  mcsSelectionDRL.h  trtEngine.cpp  trtEngine.h
cuMAC/examples/muMimoUeGrpL2Integration/: CMakeLists.txt  common_utils.h  cumac_muUeGrp_test.cu  cumac_muUeGrp_test.h  gdb_bt.sh  l1_muUeGrp_test.cpp  l1_muUeGrp_test.h  l2_muUeGrp_test.cpp  l2_muUeGrp_test.h  run_tests.sh  simple_gemm_cfp16.cu  simple_srs_memory_bank.cpp  simple_srs_memory_bank.hpp
cuMAC/examples/multiCellMuMimoScheduler/: CMakeLists.txt  config.yaml  mMimoNetwork.cu  mMimoNetwork.h  main.cpp  multiCellMuMimoScheduler.h
cuMAC/examples/multiCellSchedulerUeSelection/: CMakeLists.txt  main.cpp
cuMAC/examples/multiCellSrsScheduler/: CMakeLists.txt  main.cpp  srs_scheduler_testing_config.yaml
cuMAC/examples/pfmSort/: CMakeLists.txt  config.yaml  main.cpp  pfmSortTest.cpp  pfmSortTest.h
cuMAC/examples/scheduleTrafficTest/: CMakeLists.txt  main.cpp
cuMAC/examples/singleCellScheduler/: CMakeLists.txt  main.cpp
cuMAC/examples/tensorCoreGEMM/: cudaBatchedComplexMat.cu  cudaComplexMat.cu  tensorBatchedComplexMat.cu  tensorComplexMat.cu
cuMAC/examples/tools/: h5TvCreate.cpp  h5TvCreate.h  h5TvLoad.cpp  h5TvLoad.h
cuMAC/examples/trafficModel/: CMakeLists.txt  main.cpp  readme.md  trafficFlows.hpp  trafficGenerator.cpp  trafficGenerator.hpp  trafficService.cpp  trafficService.hpp  trafficSink.hpp
cuMAC/examples/tvLoadingTest/: CMakeLists.txt  main.cpp  tvLoadingTest.h
cuMAC/lib/cumac_msg/: CMakeLists.txt  cumac_msg.c  cumac_msg.h  cumac_muUeGrp.h  cumac_pfm_sort.h
cuMAC/scripts/: README.md  cumac_64tr_test.py  cumac_tests.sh  generate_tv.py  postrun_check.sh  run_cumac_test.py  update_parameter.py
cuMAC/src/: CMakeLists.txt  api.h  cumac.h  cumacSubcontext.cpp  cumacSubcontext.h
cuMAC/src/4T4R/: cellAssociation.cu  cellAssociation.cuh  cellAssociationCpu.cpp  cellAssociationCpu.h  mcsSelectionLUT.cu  mcsSelectionLUT.cuh  mcsSelectionLUTCpu.cpp  mcsSelectionLUTCpu.h  multiCellLayerSel.cu  multiCellLayerSel.cuh  multiCellLayerSelCpu.cpp  multiCellLayerSelCpu.h  multiCellScheduler.cu  multiCellScheduler.cuh  multiCellSchedulerCpu.cpp  multiCellSchedulerCpu.h  multiCellUeSelection.cu  multiCellUeSelection.cuh  multiCellUeSelectionCpu.cpp  multiCellUeSelectionCpu.h  roundRobinScheduler.cu  roundRobinScheduler.cuh  roundRobinSchedulerCpu.cpp  roundRobinSchedulerCpu.h  roundRobinUeSel.cu  roundRobinUeSel.cuh  roundRobinUeSelCpu.cpp  roundRobinUeSelCpu.h  singleCellScheduler.cu  singleCellScheduler.cuh  singleCellSchedulerCpu.cpp  singleCellSchedulerCpu.h  svdPrecoding.cu  svdPrecoding.cuh
cuMAC/src/64T64R/: muMimoSchedulerBaseCpu.cpp  muMimoSchedulerBaseCpu.h  multiCellBeamform.cu  multiCellBeamform.cuh  multiCellMuUeGrp.cu  multiCellMuUeGrp.cuh  multiCellMuUeSort.cu  multiCellMuUeSort.cuh
cuMAC/src/cpuMatAlg/: cpuMatAlg.cpp  cpuMatAlg.h
cuMAC/src/muMimoUserPairing/: muMimoUserPairing.cu  muMimoUserPairing.cuh
cuMAC/src/multiCellSrsScheduler/: multiCellSrsScheduler.cu  multiCellSrsScheduler.cuh
cuMAC/src/pfmSort/: pfmSort.cu  pfmSort.cuh
cuMAC/src/tools/: multiCellSinrCal.cu  multiCellSinrCal.cuh
cuPHY/: CMakeLists.txt
cuPHY-CP/aerial-fh-driver/: CMakeLists.txt
cuPHY-CP/aerial-fh-driver/lib/: doca_obj.cpp  doca_obj.hpp  flow.cpp  fronthaul.cpp  fronthaul.hpp  gpu.hpp  gpu_comm.cpp  gpu_comm.hpp  gpu_comm_doca.cu  gpu_mempool.cpp  nic.cpp  nic.hpp  packet_stats.cpp  pcap_logger.cpp  peer.cpp  peer.hpp  queue.cpp  ring_buffer.cpp  rivermax.cpp  utils.hpp
cuPHY-CP/app_utils/: CMakeLists.txt  ptp_service_status_checking.cpp  ptp_service_status_checking.hpp
cuPHY-CP/cuphydriver/: CMakeLists.txt
cuPHY-CP/cuphydriver/benchmark/: CMakeLists.txt  test_instrumentation_v3_perf.cpp  test_u64toa_perf.cpp
cuPHY-CP/cuphydriver/include/: cell.hpp  constant.hpp  context.hpp  cuphydriver_api.hpp  cv_memory_bank_srs_chest.hpp  dlbuffer.hpp  fh.hpp  gpudevice.hpp  harq_pool.hpp  memfoot.hpp  mps.hpp  order_entity.hpp  phychannel.hpp  phypdsch_aggr.hpp  pmu_reader.hpp  slot_map_dl.hpp  task_instrumentation_nested.hpp  task_instrumentation_v3.hpp  task_instrumentation_v3_factories.hpp  wavgcfo_pool.hpp  worker.hpp
cuPHY-CP/cuphydriver/src/: CMakeLists.txt
cuPHY-CP/gt_common_libs/perf_metrics/: CMakeLists.txt  README.md
cuPHY-CP/tests/dlc_test_bench/: CMakeLists.txt  dlc_test_bench.cpp  ru_emulator_wrapper.cpp  ru_emulator_wrapper.hpp  run_all_pattern_tests.sh  sendCplaneUnitTest.cpp  sendCplaneUnitTest.hpp  test_patterns_mmimo.csv  test_patterns_nrsim.csv
cuPHY-CP/tests/order_kernel_test_bench/: CMakeLists.txt
cuPHY/examples/: CMakeLists.txt
cuPHY/examples/channel_eq/: cuphy_ex_channel_eq.cpp
cuPHY/examples/common/: cuphy.hpp  cuphy_hdf5.hpp  datasets.cpp  mpsTst.py  util.hpp
cuPHY/examples/cupti_example/: CMakeLists.txt  cuphy_cupti_example.cpp
cuPHY/examples/delay_kernel_bench/: CMakeLists.txt  README.md  cuphy_ex_delay_kernel_bench.cpp
cuPHY/examples/error_correction/: cuphy_ex_ldpc.cpp
cuPHY/examples/pusch_rateMatch/: cuphy_ex_pusch_rateMatch.cpp
cuPHY/examples/pusch_rx_multi_pipe/: cuphy_ex_pusch_rx_multi_pipe.cpp  pusch_rx_test.cpp  pusch_rx_test.hpp
cuPHY/examples/srs_bfw/: cuphy_ex_srs_bfw.cpp
cuPHY/examples/srs_chEst/: cuphy_ex_srs_chEst.cpp
cuPHY/nvlog/src/: nvlog.cpp  (+2 more)
cuPHY/test/: CMakeLists.txt  cuphy_unit_test.sh  cuphy_unit_test_lock.sh  test_summary.py
cuPHY/util/: ptxas_lcheck.py  pusch_perf_collect.py
(+791 files in other folders)
